kubernetes/argocd/jellyfin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-udp
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 1900
    targetPort: 1900
    name: dlna-udp
    protocol: UDP
  - port: 7359
    targetPort: 7359
    name: discovery-udp
    protocol: UDP
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-tcp
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
    name: http-tcp
    protocol: TCP
  - port: 8920
    targetPort: 8920
    name: https-tcp
  type: ClusterIP
